<resources>
    <string name="app_name">Búálfur</string>
    <string name="property_address">Heimilisfang:</string>
    <string name="property_zipcode">Póstnúmer:</string>
    <string name="property_city">Borg/bær:</string>
    <string name="property_price">Verð:</string>
    <string name="property_size">Fermetrar:</string>
    <string name="property_bedrooms">Fjöldi herbergja:</string>
    <string name="property_bathrooms">Fjöldi baðherbergja:</string>
    <string name="property_type">Tegund húsnæðis:</string>
    <string name="property_save">Vista</string>
    <string name="login_message">Vinsamlegast skráið ykkur inn til að nota appið</string>
    <string name="login_success_message">Skráning tókst</string>
    <string name="facebook_app_id">1370264999680412</string>
    <string name="fb_login_protocol_scheme">1370264999680412</string>

    <string-array name="houseType_array">
        <item>Einbýli</item>
        <item>Fjölbýli</item>
        <item>Parhús</item>
    </string-array>

    <!-- fragment_property_list.xml layout -->
    <string name="search_text">Leit</string>
    <string name="min_price">Veldu lágmark</string>
    <string name="max_price">Veldu hámark</string>
    <string name="zip_code_text">Póstnúmer</string>
    <string name="create_button_text">Auglýsa eign</string>
    <string-array name="zip_code_array">
        <item>101</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
        <item>110</item>
        <item>111</item>
        <item>112</item>
        <item>113</item>
        <item>114</item>
        <item>116</item>
        <item>170</item>
        <item>200</item>
        <item>201</item>
        <item>203</item>
        <item>210</item>
        <item>225</item>
        <item>220</item>
        <item>221</item>
        <item>270</item>
        <item>271</item>
        <item>276</item>
    </string-array>
    <string-array name="no_of_rooms_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="size_array">
        <item>50</item>
        <item>100</item>
        <item>150</item>
        <item>200</item>
        <item>250</item>
        <item>300</item>
        <item>350</item>
        <item>400</item>
    </string-array>

    <string name="search_button_text">Leita</string>
    <string name="price_range_text">Verðbil</string>
    <string name="to_search_text">til</string>
    <string name="choose_size_range">Fermetrar</string>
    <string name="number_of_rooms">Fjöldi herbergja</string>
    <string name="map_button_text">Sjá eignir á korti</string>
    <string name="messaging_button_text">Skilaboð</string>

    <!-- fragment_property.xml layout-->
    <string name="view_address_text">Heimilisfang</string>
    <string name="view_price_text">Leiguerð</string>
    <string name="view_description_text">Lýsing</string>
    <string name="view_listing_type">Tegund húsnæðis</string>
    <string name="view_no_bathrooms">Fjöldi baðherbergja</string>
    <string name="view_number_of_bedrooms">Fjöldi svefnherbergja</string>
    <string name="view_square_meters">Fermetrar</string>
    <string name="view_city">Bær/Borg</string>
    <string name="view_zip_code">Póstnúmer</string>


    <!-- Navigation Drawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Heim</string>
    <string name="nav_photos">Ný eign</string>
    <string name="nav_movies">Prófill</string>
    <string name="nav_notifications">Skilaboð</string>
    <string name="nav_settings">Stillingar</string>
    <string name="nav_about_us">Um okkur</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Heima</item>
        <item>Ný eign</item>
        <item>Prófill</item>
        <item>Notifications</item>
        <item>Stillingar</item>
    </string-array>

    <string name="activity_title_about_us">Um okkur</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Hreinsa</string>
    <string name="action_logout">Skrá út</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Annað</string>

    <string name="no_messages_error">Engin skilaboð fundust</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
