<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_address"/>

            <EditText
                android:id="@+id/property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_zipcode"/>

            <EditText
                android:id="@+id/property_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_city"/>

            <EditText
                android:id="@+id/property_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_price"/>

            <EditText
                android:id="@+id/property_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_size"/>

            <EditText
                android:id="@+id/property_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_bedrooms"/>

            <EditText
                android:id="@+id/property_bedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_bathrooms"/>

            <EditText
                android:id="@+id/property_bathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/save_property_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/property_save" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>