<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_address_text"/>

            <TextView
                android:id="@+id/property_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_price_text"/>

            <TextView
                android:id="@+id/property_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_zip_code"/>

            <TextView
                android:id="@+id/property_zipcode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_city" />

            <TextView
                android:id="@+id/property_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_square_meters" />

            <TextView
                android:id="@+id/property_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_number_of_bedrooms" />

            <TextView
                android:id="@+id/property_bedrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_no_bathrooms" />

            <TextView
                android:id="@+id/property_bathrooms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_listing_type" />

            <TextView
                android:id="@+id/property_houseType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/view_description_text" />

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:id="@+id/property_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
